fixing loop to avoid error
Avoid "subscription out of bounds error" if there are no sequences to be processed for the individualized report. This way it will jump the IDs that do not have any good sequence.

--- a/inst/rmd/HC_report.Rmd
+++ b/inst/rmd/HC_report.Rmd
@@ -369,7 +369,7 @@ ape::write.dna(sangerbasecallfasta,
 
 ```{r loop_report, echo=FALSE, include=FALSE}
 
-for (i in unique(sf$summaries$ID)){ 
+for (i in unique(sf_filtered$ID)){ 
 rmarkdown::render("2021-03-04_template_animal.Rmd",  # file 2
                   output_file =  paste("report_", i, '_', Sys.Date(), ".html", sep=''), 
                   output_dir = paste0("../",result.dir, Sys.Date()))
