--- a/inst/rmd/HC_report.Rmd
+++ b/inst/rmd/HC_report.Rmd
@@ -143,14 +143,16 @@ g1 <- sf$summaries %>%
   ylim(0,60)+
   ggtitle("Before filtering")+
   theme(axis.text.x = element_text(angle = 60, hjust = 1))+
-  labs(y="Trimmed Mean Quality Score", x = NULL) 
+  labs(y="Trimmed Mean Quality Score", x = NULL) +
+  theme_bw()
 g2 <- sf_filtered %>%
   ggplot(aes(x = folder.name, y = trimmed.mean.quality)) + 
   geom_boxplot() +
   ylim(0,60)+
   ggtitle("After filtering") +
   theme(axis.text.x = element_text(angle = 60, hjust = 1))+
-  labs(y= NULL, x = NULL)
+  labs(y= NULL, x = NULL) +
+  theme_bw()
 grid.arrange(g1, g2, nrow = 1)
 
 ```
@@ -163,7 +165,9 @@ g3 <- sf$summaries %>%
                geom_point()+
                ylim(0,60)+
                xlim(0,60)+
-               ggtitle("Not filtered")
+               ggtitle("Not filtered") +
+                theme_bw()
+  
 
 g4 <- sf_filtered %>% 
                ggplot(aes(trimmed.mean.quality, 
@@ -171,7 +175,9 @@ g4 <- sf_filtered %>%
                geom_point()+
                ylim(0,60)+
                xlim(0,60)+
-               ggtitle("Filtered")
+               ggtitle("Filtered") +
+              theme_bw()
+
 grid.arrange(g3,g4,nrow = 1)
 ```
 
@@ -272,12 +278,15 @@ You can check the CDR3 chromatograms in the folder called __"chromatograms"__.
 ```{r plot_CDR3, echo=FALSE, warning = FALSE, fig.align='center'}
 #plot number secondary peaks in CDR3
 g5 <- sf_filtered %>% ggplot(aes(sec.peak.CDR3>0)) + geom_bar() +
-  xlab("Secondary peaks CDR3 > 0")
+  xlab("Secondary peaks CDR3 > 0") +
+  theme_bw()
 g6 <- sf_filtered %>% ggplot(aes(sec.peak.CDR3)) + 
     geom_bar(aes(y = (..count..)/sum(..count..))) + 
     scale_y_continuous(labels=scales::percent) +
     ylab("relative frequencies") + 
-    xlab("Number of secondary peaks CDR3")
+    xlab("Number of secondary peaks CDR3")+
+    theme_bw()
+
 grid.arrange(g5, g6, nrow = 1)
 
 
